fix: also add a fallback for the serif regular weight for NUXT
because this one has been fucked up _as well_.

Yes, yes, it's all good that this has been fixed, but boy have I spent way too much time on this now.

Refs: EDTECH-1699

--- a/scss/vars.scss
+++ b/scss/vars.scss
@@ -5,6 +5,7 @@ $font-family-serif: nzz-serif, var(--nzz-font-serif, "NZZ Serif"), "Iowan Old St
 // .s-q-item
 $font-color: var(--q-primary-text-color, #000000);
 
+$font-weight-serif-nuxt-regular: 300;
 $font-weight-serif-regular: 400;
 $font-weight-serif-bold: 500;
 
