--- a/test/__snapshots__/sass.css
+++ b/test/__snapshots__/sass.css
@@ -7,6 +7,9 @@
   color: #000000;
   color: var(--q-primary-text-color, #000000);
 }
+:root:not(:has(.font-sans)) .s-font-text-s {
+  font-weight: 300;
+}
 .s-font-text-s--strong {
   font-weight: 500;
 }
@@ -18,6 +21,9 @@
   font-weight: 400;
   color: #000000;
   color: var(--q-primary-text-color, #000000);
+}
+:root:not(:has(.font-sans)) .s-font-text {
+  font-weight: 300;
 }
 .s-font-text--strong {
   font-weight: 500;
